infra/template.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: |
  GovSupport - AWS Cloudformation Template

Parameters:
  StageName:
    Type: String
    Description: Name of the stage (e.g., dev, prod)
    AllowedValues:
      - dev
      - prod
  UserTableName:
    Type: String
    Description: Name of the DynamoDB table for users
  RoutesTableName:
    Type: String
    Description: Name of the DynamoDB table for routes
  PromptsTableName:
    Type: String
    Description: Name of the DynamoDB table for prompts
  MessageTableName:
    Type: String
    Description: Name of the DynamoDB table for messages
  ResponsesTableName:
    Type: String
    Description: Name of the DynamoDB table for responses
  OfficesTableName:
    Type: String
    Description: Name of the DynamoDB table for responses
  EvaluationTableName:
    Type: String
    Description: Name of the DynamoDB table for evaluation
  GovSupportServiceAccountSecretArn:
    Type: String
    Description: AWS Arn for GovSupport service account
  GovSupportSupervisorServiceAccountSecretArn:
    Type: String
    Description: AWS Arn for GovSupport Supervisor service account
  GovSupportImage:
    Type: String
    Description: GovSupport container image
  GovSupportGoogleCloudProject:
    Type: String
    Description: Google Cloud Project Id
  GovSupportSupervisorGoogleCloudProject:
    Type: String
    Description: Google Cloud Project Id
  LLM:
    Type: String
    Description: LLM to use
  DomainName:
    Type: String
    Description: Domain for Cert
  OpensearchUrl:
    Type: String
    Description: Url for Opensearch
  OpensearchIndex:
    Type: String
    Description: Index for Opensearch
  MicrosoftAppIdSecretArn:
    Type: String
    Description: Secret Arn for App Id for Teams integration
  MicrosoftAppPasswordSecretArn:
    Type: String
    Description: Secret Arn for App password for Teams integration

Resources:
  GovSupportVPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true

  GovSupportPrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-2a
      VpcId: !Ref GovSupportVPC
      CidrBlock: 10.0.0.0/24

  GovSupportPublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-2b
      VpcId: !Ref GovSupportVPC
      CidrBlock: 10.0.1.0/24
  GovSupportPublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: eu-west-2a
      VpcId: !Ref GovSupportVPC
      CidrBlock: 10.0.2.0/24

  GovSupportNATGateway:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt GovSupportElasticIP.AllocationId
      SubnetId: !Ref GovSupportPublicSubnet1

  GovSupportInternetGateway:
    Type: AWS::EC2::InternetGateway

  GovSupportElasticIP:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref GovSupportVPC
      InternetGatewayId: !Ref GovSupportInternetGateway

  GovSupportSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub GovSupport-security-group-${StageName}
      GroupDescription: Security group for GovSupport ECS Fargate
      VpcId: !Ref GovSupportVPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - IpProtocol: -1
          CidrIp: 0.0.0.0/0

  GovSupportPrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GovSupportVPC

  GovSupportPublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref GovSupportVPC

  GovSupportInternetGatewayRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref GovSupportPublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref GovSupportInternetGateway

  GovSupportPrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref GovSupportPrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref GovSupportNATGateway

  PrivateSubnetRouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref GovSupportPrivateRouteTable
      SubnetId: !Ref GovSupportPrivateSubnet1

  PublicSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref GovSupportPublicRouteTable
      SubnetId: !Ref GovSupportPublicSubnet1
  PublicSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref GovSupportPublicRouteTable
      SubnetId: !Ref GovSupportPublicSubnet2

  GovSupportLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub GovSupport-loadbalancer-${StageName}
      Scheme: internet-facing
      Type: application
      Subnets:
        - !Ref GovSupportPublicSubnet1
        - !Ref GovSupportPublicSubnet2
      SecurityGroups:
        - !Ref GovSupportSecurityGroup

  GovSupportHTTPSListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref GovSupportLoadBalancer
      Port: 443
      Protocol: HTTPS
      MutualAuthentication:
        Mode: passthrough
      Certificates:
        - CertificateArn: !Ref GovSupportCertificate
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref GovSupportTargetGroup

  GovSupportCertificate:
    Type: AWS::CertificateManager::Certificate
    Properties:
      DomainName: !Ref DomainName

  GovSupportTargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    DependsOn: GovSupportLoadBalancer
    Properties:
      Name: !Sub GovSupport-targetgroup-${StageName}
      Port: 80
      Protocol: HTTP
      TargetType: ip
      HealthCheckPort: 80
      HealthCheckProtocol: HTTP
      HealthCheckPath: /health
      Matcher:
        HttpCode: 200
      VpcId: !Ref GovSupportVPC

  GovSupportTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub GovSupport-task-${StageName}
      ExecutionRoleArn: !GetAtt GovSupportRole.Arn
      TaskRoleArn: !GetAtt GovSupportRole.Arn
      NetworkMode: awsvpc
      RequiresCompatibilities:
        - FARGATE
      Cpu: 4096
      Memory: 8192
      ContainerDefinitions:
        - Name: GovSupport-container
          Image: !Ref GovSupportImage
          PortMappings:
            - ContainerPort: 80
          Secrets:
            - Name: GovSupport_SERVICE_ACCOUNT
              ValueFrom: !Ref GovSupportServiceAccountSecretArn
            - Name: GovSupport_SUPERVISOR_SERVICE_ACCOUNT
              ValueFrom: !Ref GovSupportSupervisorServiceAccountSecretArn
            - Name: MicrosoftAppId
              ValueFrom: !Ref MicrosoftAppIdSecretArn
            - Name: MicrosoftAppPassword
              ValueFrom: !Ref MicrosoftAppPasswordSecretArn
          Environment:
            - Name: MESSAGES_TABLE_NAME
              Value: !Ref MessageTableName
            - Name: RESPONSES_TABLE_NAME
              Value: !Ref ResponsesTableName
            - Name: USERS_TABLE_NAME
              Value: !Ref UserTableName
            - Name: ROUTES_TABLE_NAME
              Value: !Ref RoutesTableName
            - Name: PROMPTS_TABLE_NAME
              Value: !Ref PromptsTableName
            - Name: OFFICES_TABLE_NAME
              Value: !Ref OfficesTableName
            - Name: EVALUATION_TABLE_NAME
              Value: !Ref EvaluationTableName
            - Name: STAGE
              Value: !Ref StageName
            - Name: HF_HOME
              Value: /tmp
            - Name: XDG_CACHE_HOME
              Value: /tmp
            - Name: LLM
              Value: !Ref LLM
            - Name: OPENSEARCH_HTTPS
              Value: !Ref OpensearchUrl
            - Name: OPENSEARCH_INDEX
              Value: !Ref OpensearchIndex
            - Name: GovSupport_GOOGLE_CLOUD_PROJECT
              Value: !Ref GovSupportGoogleCloudProject
            - Name: GovSupport_SUPERVISOR_GOOGLE_CLOUD_PROJECT
              Value: !Ref GovSupportSupervisorGoogleCloudProject
            - Name: TASK_ROLE_ARN
              Value: !GetAtt GovSupportRole.Arn
          LogConfiguration:
            LogDriver: awslogs
            Options:
              awslogs-group: !Ref GovSupportLogGroup
              awslogs-region: !Ref AWS::Region
              awslogs-stream-prefix: GovSupport-container

  GovSupportCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub GovSupport-cluster-${StageName}

  GovSupportService:
    Type: AWS::ECS::Service
    Properties:
      Cluster: !Ref GovSupportCluster
      ServiceName: !Sub GovSupport-service-${StageName}
      TaskDefinition: !Ref GovSupportTaskDefinition
      DesiredCount: 1
      LaunchType: FARGATE
      NetworkConfiguration:
        AwsvpcConfiguration:
          AssignPublicIp: DISABLED
          SecurityGroups:
            - !Ref GovSupportSecurityGroup
          Subnets:
            - !Ref GovSupportPrivateSubnet1
      HealthCheckGracePeriodSeconds: 30
      LoadBalancers:
        - ContainerName: GovSupport-container
          ContainerPort: 80
          TargetGroupArn: !Ref GovSupportTargetGroup

  GovSupportLogGroup:
    Type: AWS::Logs::LogGroup
    Properties:
      LogGroupName: !Sub /ecs/GovSupport-log-group-${StageName}
      RetentionInDays: 7

  GovSupportRole:
    Type: AWS::IAM::Role
    Properties:
      RoleName: !Sub GovSupportRole-${StageName}
      AssumeRolePolicyDocument:
        Version: '2012-10-17'
        Statement:
          - Effect: Allow
            Principal:
              Service: ecs-tasks.amazonaws.com
            Action: sts:AssumeRole
          - Effect: Allow
            Principal:
              AWS: !Sub arn:aws:iam::${AWS::AccountId}:role/GovSupportRole-${StageName}
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy
      Policies:
        - PolicyName: !Sub GovSupportECRPolicy-${StageName}
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - ecr:GetAuthorizationToken
                  - ecr:GetDownloadUrlForLayer
                  - ecr:BatchGetImage
                  - sts:GetSessionToken
                Resource: '*'
        - PolicyName: !Sub GovSupportLoggingPolicy-${StageName}
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Resource: '*'
        - PolicyName: !Sub GovSupportDynamoPolicy-${StageName}
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - dynamodb:GetItem
                  - dynamodb:PutItem
                  - dynamodb:UpdateItem
                  - dynamodb:Scan
                  - dynamodb:Query
                Resource: !GetAtt MessagesTable.Arn
              - Effect: Allow
                Action:
                  - dynamodb:GetItem
                  - dynamodb:PutItem
                  - dynamodb:UpdateItem
                  - dynamodb:Scan
                  - dynamodb:Query
                  - dynamodb:DeleteItem
                Resource: !GetAtt ResponsesTable.Arn
              - Effect: Allow
                Action:
                  - dynamodb:GetItem
                  - dynamodb:UpdateItem
                Resource: !GetAtt OfficesTable.Arn
              - Effect: Allow
                Action:
                  - dynamodb:PutItem
                  - dynamodb:GetItem
                  - dynamodb:DeleteItem
                  - dynamodb:Scan
                  - dynamodb:UpdateItem
                Resource: !GetAtt UsersTable.Arn
              - Effect: Allow
                Action:
                  - dynamodb:Query
                  - dynamodb:PutItem
                  - dynamodb:UpdateItem
                  - dynamodb:GetItem
                Resource: !GetAtt EvaluationTable.Arn
              - Effect: Allow
                Action:
                  - dynamodb:Scan
                Resource: !GetAtt RoutesTable.Arn
              - Effect: Allow
                Action:
                  - dynamodb:PutItem
                  - dynamodb:GetItem
                  - dynamodb:DeleteItem
                  - dynamodb:Scan
                  - dynamodb:UpdateItem
                Resource: !GetAtt PromptsTable.Arn
        - PolicyName: !Sub BedrockInvokerPolicy-${StageName}
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - bedrock:InvokeModel
                  - bedrock:InvokeModelWithResponseStream
                Resource: '*'
        - PolicyName: !Sub GovSupportSecrets-${StageName}
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - secretsmanager:GetSecretValue # pragma: allowlist secret
                Resource: '*'
        - PolicyName: !Sub GovSupportAOSS-${StageName}
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
              - Effect: Allow
                Action:
                  - aoss:APIAccessAll
                Resource: '*'

  UsersTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Ref UserTableName
      AttributeDefinitions:
        - AttributeName: userEmail
          AttributeType: S
      KeySchema:
        - AttributeName: userEmail
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST

  RoutesTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Ref RoutesTableName
      AttributeDefinitions:
        - AttributeName: name
          AttributeType: S
      KeySchema:
        - AttributeName: name
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST

  PromptsTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Ref PromptsTableName
      AttributeDefinitions:
        - AttributeName: PromptName
          AttributeType: S
      KeySchema:
        - AttributeName: PromptName
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST

  MessagesTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Ref MessageTableName
      AttributeDefinitions:
        - AttributeName: threadId
          AttributeType: S
      KeySchema:
        - AttributeName: threadId
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST
      StreamSpecification:
        StreamViewType: NEW_AND_OLD_IMAGES

  ResponsesTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Ref ResponsesTableName
      AttributeDefinitions:
        - AttributeName: threadId
          AttributeType: S
      KeySchema:
        - AttributeName: threadId
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST
      StreamSpecification:
        StreamViewType: NEW_AND_OLD_IMAGES

  OfficesTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Ref OfficesTableName
      AttributeDefinitions:
        - AttributeName: emailDomain
          AttributeType: S
      KeySchema:
        - AttributeName: emailDomain
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST
      StreamSpecification:
        StreamViewType: NEW_AND_OLD_IMAGES

  EvaluationTable:
    Type: AWS::DynamoDB::Table
    Properties:
      TableName: !Ref EvaluationTableName
      AttributeDefinitions:
        - AttributeName: threadId
          AttributeType: S
      KeySchema:
        - AttributeName: threadId
          KeyType: HASH
      BillingMode: PAY_PER_REQUEST
      StreamSpecification:
        StreamViewType: NEW_AND_OLD_IMAGES
